Make sure the padlock is visible.
git-svn-id: http://svn.scratchpads.eu/svn/scratchpads/branches/drupal6@2252 ccd0800f-5989-4abc-b5cb-522e550fd16a

--- a/sites/all/modules/mado/mado.css
+++ b/sites/all/modules/mado/mado.css
@@ -49,6 +49,7 @@
  top: 5px;
  right: 10px;
  padding: 10px;
+ z-index: 1000;
 }
 /* Within blocks */
 .mado_scroll{
